fix opensource align

--- a/web/css/pages/opensource/opensource.less
+++ b/web/css/pages/opensource/opensource.less
@@ -86,7 +86,7 @@
 
   &__top {
     display: flex;
-    align-items: flex-end;
+    align-items: center;
     margin-bottom: 4px;
   }
 
@@ -125,7 +125,6 @@
 
     span {
       display: block;
-      margin-bottom: -6px;
     }
   }
 
